fix psalm
